--- a/tmux.conf
+++ b/tmux.conf
@@ -18,16 +18,13 @@ set-option -g default-terminal "screen-256color"
 
 bind-key -r f run-shell "tmux neww ~/.config/scripts/tmux-sessionizer"
 
-set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
-set -g @fzf-url-history-limit '2000'
-
 set -g @plugin 'tmux-plugins/tpm'
-
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @sessionx-zoxide-mode 'on'
 set -g @plugin 'jorismertz/tmux-rosepine'
+
+set -g @sessionx-zoxide-mode 'on'
 
 set -g @catppuccin_flavour 'moon' 
 set -g @catppuccin_window_left_separator ""
@@ -44,6 +41,7 @@ set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
-run '~/.tmux/plugins/tpm/tpm'
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
+run '~/.config/tmux/plugins/tpm/tpm'
