--- a/tmux.conf
+++ b/tmux.conf
@@ -26,22 +26,22 @@ set -g @plugin 'jorismertz/tmux-rosepine'
 
 set -g @sessionx-zoxide-mode 'on'
 
-set -g @catppuccin_flavour 'moon' 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text ""
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text ""
-set -g @catppuccin_status_modules_right "directory host session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @rosepine_flavour 'moon' 
+set -g @rosepine_window_left_separator ""
+set -g @rosepine_window_right_separator " "
+set -g @rosepine_window_middle_separator " █"
+set -g @rosepine_window_number_position "right"
+set -g @rosepine_window_default_fill "number"
+set -g @rosepine_window_default_text "#W"
+set -g @rosepine_window_current_fill "number"
+set -g @rosepine_window_current_text "#W"
+set -g @rosepine_status_modules_right "directory host session"
+set -g @rosepine_status_left_separator  " "
+set -g @rosepine_status_right_separator ""
+set -g @rosepine_status_right_separator_inverse "no"
+set -g @rosepine_status_fill "icon"
+set -g @rosepine_status_connect_separator "no"
+set -g @rosepine_directory_text '#{s|$HOME|~|:pane_current_path}'
 
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
 run '~/.config/tmux/plugins/tpm/tpm'
