--- a/tmux.reset.conf
+++ b/tmux.reset.conf
@@ -3,7 +3,7 @@
 # unbind-key -a
 # Now reinsert all the regular tmux keys
 bind ^X lock-server
-bind ^C new-window -c "$HOME"
+bind ^C new-window -c "#{pane_current_path}"
 bind ^D detach
 bind * list-clients
 
