fix pane path module

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,7 @@ set -g @rosepine_status_right_separator ""
 set -g @rosepine_status_right_separator_inverse "no"
 set -g @rosepine_status_fill "icon"
 set -g @rosepine_status_connect_separator "no"
-set -g @rosepine_directory_text '#{s|$HOME|~|:pane_current_path}'
+set -g @rosepine_directory_text '#(dirs)'
 
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
 run '~/.config/tmux/plugins/tpm/tpm'
