--- a/tmux.conf
+++ b/tmux.conf
@@ -43,5 +43,8 @@ set -g @rosepine_status_fill "icon"
 set -g @rosepine_status_connect_separator "no"
 set -g @rosepine_directory_text '#(dirs)'
 
+set -g status-bg default
+set -g status-style bg=default
+
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
 run '~/.config/tmux/plugins/tpm/tpm'
