--- a/tmux.reset.conf
+++ b/tmux.reset.conf
@@ -1,7 +1,4 @@
-
-# First remove *all* keybindings
 # unbind-key -a
-# Now reinsert all the regular tmux keys
 bind ^X lock-server
 bind ^C new-window -c "#{pane_current_path}"
 bind ^D detach
@@ -34,6 +31,6 @@ bind : command-prompt
 bind * setw synchronize-panes
 bind P set pane-border-status
 bind c kill-pane
-bind x swap-pane -D
+bind x kill-window
 bind S choose-session
 bind-key -T copy-mode-vi v send-keys -X begin-selectiontmux.res
