--- a/tmux.reset.conf
+++ b/tmux.reset.conf
@@ -31,6 +31,6 @@ bind : command-prompt
 bind * setw synchronize-panes
 bind P set pane-border-status
 bind c kill-pane
-bind x kill-window
+bind x kill-session
 bind S choose-session
 bind-key -T copy-mode-vi v send-keys -X begin-selectiontmux.res
