move stuff around

--- a/tmux.reset.conf
+++ b/tmux.reset.conf
@@ -1,12 +1,25 @@
-# unbind-key -a
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
+
+set -g base-index 1
+set -g detach-on-destroy off
+set -g escape-time 0
+set -g history-limit 1000000
+set -g renumber-windows on
+set -g set-clipboard on
+set -g status-position top
+set -g default-terminal "${TERM}"
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
+
+set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -g default-terminal "screen-256color"
+
 bind ^X lock-server
 bind ^C new-window -c "#{pane_current_path}"
 bind ^D detach
 bind * list-clients
-
 bind H previous-window
 bind L next-window
-
 bind r command-prompt "rename-window %%"
 bind R source-file ~/.config/tmux/tmux.conf
 bind ^A last-window
@@ -33,4 +46,10 @@ bind P set pane-border-status
 bind c kill-pane
 bind x kill-session
 bind S choose-session
-bind-key -T copy-mode-vi v send-keys -X begin-selectiontmux.res
+
+# Vim bindings
+setw -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
+bind -T copy-mode-vi Escape send -X clear-selection
