--- a/tmux.conf
+++ b/tmux.conf
@@ -1,23 +1,11 @@
 source-file ~/.config/tmux/tmux.reset.conf
 
 set -g prefix ^A
-set -g base-index 1
-set -g detach-on-destroy off
-set -g escape-time 0
-set -g history-limit 1000000
-set -g renumber-windows on
-set -g set-clipboard on
-set -g status-position top
-set -g default-terminal "${TERM}"
-setw -g mode-keys vi
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
-
-set-option -g terminal-overrides ',xterm-256color:RGB'
-set-option -g default-terminal "screen-256color"
+set -g default-shell /usr/bin/zsh
 
 bind-key -r f run-shell "tmux neww ~/.config/tmux/scripts/sessionizer"
 
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -26,6 +14,7 @@ set -g @plugin 'jorismertz/tmux-rosepine'
 
 set -g @sessionx-zoxide-mode 'on'
 
+# Appearance options
 set -g @rosepine_flavour 'moon' 
 set -g @rosepine_window_left_separator ""
 set -g @rosepine_window_right_separator " "
@@ -42,9 +31,7 @@ set -g @rosepine_status_right_separator_inverse "no"
 set -g @rosepine_status_fill "icon"
 set -g @rosepine_status_connect_separator "no"
 set -g @rosepine_directory_text '#(dirs)'
-
 set -g status-bg default
 set -g status-style bg=default
 
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins'
 run '~/.config/tmux/plugins/tpm/tpm'
