--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 source-file ~/.config/tmux/tmux.reset.conf
 
 set -g prefix ^A
-set -g default-shell /usr/bin/zsh
+set -g default-shell /bin/zsh
 
 bind-key -r f run-shell "tmux neww ~/.config/tmux/scripts/sessionizer"
 
